--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -617,7 +617,7 @@
   .float-wrapper {
     bottom: 20px;
     right: 20px;
-    gap: 15px;
+    /* gap: 15px; */
   }
 
   .whatsapp-float,
@@ -723,7 +723,7 @@
     width: 50px;
     height: 50px;
     bottom: 20px;
-    right: 20px;
+    right: 0px;
   }
 
   .whatsapp-float .bi-whatsapp {
